# terrars-dnsimple-dnsimple

./: Cargo.toml  readme.md  terrars.json
src/: lib.rs
src/dnsimple/: contact.rs  data_certificate.rs  data_registrant_change_check.rs  data_zone.rs  domain.rs  domain_delegation.rs  ds_record.rs  email_forward.rs  lets_encrypt_certificate.rs  mod.rs  provider.rs  registered_domain.rs  zone_record.rs
